--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -16,13 +16,12 @@ jobs:
         with:
           token: ${{ secrets.METRICS_TOKEN }}
           user: chonchiog
-          template: classic
-          base: header, activity, community, repositories
+          template: terminal
+          base: header, repositories
           config_timezone: America/New_York
+          config_display: large
+
           plugin_languages: yes
-          plugin_languages_analysis_timeout: 15
-          plugin_languages_categories: markup, programming
-          plugin_languages_colors: github
-          plugin_languages_limit: 8
+          plugin_languages_limit: 6
           plugin_languages_sections: most-used
           plugin_languages_details: percentage
