Switch to classic template

--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -16,15 +16,12 @@ jobs:
         with:
           token: ${{ secrets.METRICS_TOKEN }}
           user: chonchiog
-          template: terminal
+          template: classic
           base: header, repositories
           config_timezone: America/New_York
-          config_display: large
-          config_output: svg
           extras_css: |
-            * { font-family: monospace; }
             svg { background: #2d1b4e; }
-            .field { color: #e879f9; }
+            .field, text { fill: #e879f9; }
             h1, h2, h3 { color: #c084fc; }
 
           plugin_languages: yes
