--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -17,13 +17,14 @@ jobs:
           token: ${{ secrets.METRICS_TOKEN }}
           user: chonchiog
           template: terminal
-          base: header, repositories
+          base: repositories
           config_timezone: America/New_York
           extras_css: |
             svg { background: transparent; }
             .terminal { background: #0d1117; border: 1px solid #00ff00; box-shadow: 0 0 10px #00ff0044; }
             .terminal-text { color: #00ff00; text-shadow: 0 0 5px #00ff00; }
             pre, code, .field { color: #00ff00; }
+            .terminal-header, .terminal-title { display: none; }
 
           plugin_languages: yes
           plugin_languages_limit: 6
